# ModePerturbator

./: README.md  pyproject.toml  requirements.txt  setup.py
modeperturber/: __init__.py  normal_mode_analysis.py  pyscf4ase_modi.py
notebooks/: vib_perturb_pkg.ipynb
