[tool.poetry]
name = "modeperturber"
version = "0.0.1"
description = "Normal mode like geometry perterber"
authors = ["Kang mingi <kangmg@korea.ac.kr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ase = "*"
torchani = "*"
pointgroup = "*"
pymsym = "*"
PySCF4ASE = { git = "https://github.com/kangmg/PySCF4ASE.git" }
AIMNet2 = { git = "https://github.com/isayevlab/AIMNet2.git", rev = "82dcc21d059243f7ee30fe0427c1b718def1e9cb" }
mace_hessian = { git = "https://github.com/Nilsgoe/mace_hessian.git", rev = "31caf70aea7642dd0783eb5129e967ca7352c971" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
